# rosalind

./: .gitignore  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.rst
src/rosalind/: __init__.py  base.py  const.py
tests/: test_base.py
