[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rosalind"
authors = [
    {name = "Alyss Flynn", email = "alyss.flynn@me.com"},
]
description = "Package with some basic genetics functions."
readme = "README.rst"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    # Add runtime dependencies here
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]


[project.optional-dependencies]
lint = [
    "mypy",
    "ruff",
]
test = [
    "pytest==7.4.1",
    "pytest-cov==4.1.0",
    "coverage[toml]==7.3.1",
]
doc = [
    "sphinx",
]
build = [
    "build[virtualenv]==1.0.3",
]
dev = [
    "tox",
    "rosalind[lint]",
    "rosalind[test]",
    "rosalind[doc]",
    "rosalind[build]",
]


[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py",
    "build/",
    "tests/",
]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "ANN101",   # "missing-type-self"
    "PT001",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
]


[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
    "D100", # Missing docstring in public function
    "INP001", # Require __init__.py
    "ANN201", # Missing return types
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
    "D104", # Missing docstring in public function
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = false # Functions need to be annotated
warn_unused_ignores = true
ignore_missing_imports = True
exclude = [
    "rosalind-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
]


[tool.pytest.ini_options]
addopts = """
    --import-mode=append
    --cov=rosalind
    --cov-config=pyproject.toml
    --cov-report=
    """

[tool.coverage.paths]
# Maps coverage measured in site-packages to source files in src
source = ["src/", ".tox/*/lib/python*/site-packages/"]

[tool.coverage.html]
directory = "reports/coverage_html"
